--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,17 @@
     /* Visit https://aka.ms/tsconfig to read more about this file */
     /* Projects */
     "incremental": false, /* Save .tsbuildinfo files to allow for incremental compilation of projects. */
+    "moduleResolution": "node", /* Specify how TypeScript looks up a file from a given module specifier. */
     /* Language and Environment */
-    "target": "es2016", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    "module": "CommonJS", /* Specify what module code is generated. */
+    "target": "es6", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "rootDir": "./script", /* Specify the root folder within your source files. */
     "outDir": "./static/script", /* Specify an output folder for all emitted files. */
     "esModuleInterop": true, /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
     "forceConsistentCasingInFileNames": true, /* Ensure that casing is correct in imports. */
     "removeComments": true,
+    "module": "es6",
     /* Type Checking */
     "strict": true, /* Enable all strict type-checking options. */
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+    "skipLibCheck": true, /* Skip type checking all .d.ts files. */
+  },
 }
