--- a/.gitignore
+++ b/.gitignore
@@ -162,9 +162,11 @@ cython_debug/
 # Специфичные для проекта файлы
 db/
 .key
-static/script/
+static/
 
 # Файлы TypeScript
+package-lock.json
+package.json
 node_modules/
 .node_modules/
 **/.vs
