--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,4 @@ sqlalchemy
 argparse
 flask
 flask_cors
-# logging должно быть внизу, чтобы в случае ошибки не обрывать
-# все остальные установки
-logging
+cryptography
