--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "python.analysis.typeCheckingMode": "basic",
     "js/ts.implicitProjectConfig.strictNullChecks": true,
-    "js/ts.implicitProjectConfig.strictFunctionTypes": true
+    "js/ts.implicitProjectConfig.strictFunctionTypes": true,
 }
