--- a/.gitignore
+++ b/.gitignore
@@ -162,7 +162,8 @@ cython_debug/
 # Специфичные для проекта файлы
 db/
 .key
-static/
+static/**
+!static/favicon.ico
 
 # Файлы TypeScript
 package-lock.json
