Добавлен код, который в будущем будет использован для открытия проектов на сайте. Я нарушил принцип, что не надо реализовывать то, что не нужно

--- a/web/json/default.project.json
+++ b/web/json/default.project.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "https://zatrit.pythonanywhere.com/static/json/project.schema.json",
+    "$schema": "project.schema.json",
     "nodes": [
         {
             "type": "output",
