--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "ajv": "^8.12.0",
+    "class-transformer": "^0.5.1",
     "vis-network": "^9.1.6"
   },
   "devDependencies": {
