--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "ajv": "^8.12.0",
     "class-transformer": "^0.5.1",
+    "vis-data": "^7.1.6",
     "vis-network": "^9.1.6"
   },
   "devDependencies": {
