--- a/web/json/default.project.json
+++ b/web/json/default.project.json
@@ -5,7 +5,7 @@
             "type": "output",
             "name": "json",
             "id": 0,
-            "uses": [
+            "from": [
                 1,
                 2,
                 3
@@ -31,7 +31,7 @@
             "type": "random",
             "name": "linear_congruential",
             "id": 3,
-            "uses": [
+            "from": [
                 1,
                 2
             ],
