--- a/web/json/default.project.json
+++ b/web/json/default.project.json
@@ -19,7 +19,7 @@
             "name": "urandom",
             "id": 1,
             "props": {
-                "nbytes": 8
+                "n_bytes": 8
             }
         },
         {
