--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "vis-network": "^9.1.6"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "esbuild": "^0.17.14",
     "eslint": "^8.38.0",
+    "file-saver": "^2.0.5",
     "typescript": "^5.0.4"
   }
 }
